--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/style.scss">
-    <title>Vite App</title>
+    <title>Jacob Feit Mann</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Jacob Feit Mann</h1>
+    <h2>Developer and Designer</h2>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
