Add first few blocks to the page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/style.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/bd9f489d9a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/src/style.scss" />
     <title>Jacob Feit Mann</title>
   </head>
   <body>
-    <h1>Jacob Feit Mann</h1>
-    <h2>Developer and Designer</h2>
+    <div id="title-block">
+      <h1>Jacob Feit Mann</h1>
+      <h2>Developer and Designer</h2>
+    </div>
+    <div class="centered-column" id="main-links">
+      <h2>– Design Work –</h2>
+      <h2>– Programming Work –</h2>
+    </div>
+    <div class="centered-row mb" id="contact-icons">
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-regular fa-envelope"></i>
+    </div>
+    <div class="centered-row mb-4">
+      <img src="./src/media/arrow.svg" alt="Arrow Icon" />
+    </div>
+    <div class="centered-row section-heading">
+      <h2>Design Work</h2>
+    </div>
+    <div class="gallery">
+      <div class="thumbnail"></div>
+      <div class="thumbnail"></div>
+      <div class="thumbnail"></div>
+      <div class="thumbnail"></div>
+      <div class="thumbnail"></div>
+      <div class="thumbnail"></div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
