Fill out most of the content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/bd9f489d9a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/bd9f489d9a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/src/style.scss" />
     <title>Jacob Feit Mann</title>
   </head>
@@ -31,16 +34,90 @@
     <div class="centered-row mb-4">
       <img src="./src/media/arrow.svg" alt="Arrow Icon" />
     </div>
-    <div class="centered-row section-heading">
+    <div class="section-heading">
       <h2>Design Work</h2>
     </div>
     <div class="gallery">
-      <div class="thumbnail"></div>
-      <div class="thumbnail"></div>
-      <div class="thumbnail"></div>
-      <div class="thumbnail"></div>
-      <div class="thumbnail"></div>
-      <div class="thumbnail"></div>
+      <div class="thumbnail">
+        <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+      </div>
+      <div class="thumbnail">
+        <img
+          src="./src/media/cupcakes_thumbnail.png"
+          alt="Afternoon Cupcakes Logo"
+        />
+      </div>
+      <div class="thumbnail">
+        <img src="./src/media/amoriem_thumbnail.jpg" alt="Amoriem Labs Logo" />
+      </div>
+      <div class="thumbnail">
+        <img
+          src="./src/media/gaming_counters_thumbnail.png"
+          alt="Gaming Counters Collection Postcard"
+        />
+      </div>
+      <div class="thumbnail">
+        <img src="./src/media/grit_thumbnail.jpg" alt="GRIT Logo" />
+      </div>
+      <div class="thumbnail">
+        <img src="./src/media/nmg_thumbnail.png" alt="New Matrix Group Logo" />
+      </div>
+    </div>
+    <div class="section-heading">
+      <h2>Programming Work</h2>
+    </div>
+    <div class="project-card">
+      <div class="project-text">
+        <h2>"Brain-Rock-Thing"</h2>
+        <p>This is filler text to be replaced later</p>
+      </div>
+      <img
+        src="./src/media/brain_rock_thumbnail.png"
+        alt="Brain-Rock-Thing sculpture"
+      />
+    </div>
+    <div class="project-card">
+      <div class="project-text">
+        <h2>High Noon</h2>
+        <p>
+          This one was a video game or something whatever man I’m going to
+          replace this text when I make the actual site ok
+        </p>
+      </div>
+      <img
+        src="./src/media/high_noon_thumbnail.png"
+        alt="Brain-Rock-Thing sculpture"
+      />
+    </div>
+    <div class="project-card">
+      <div class="project-text">
+        <h2>MIDI Signal Augmenter</h2>
+        <p>
+          I used a language called SuperCollider to make this thing blah blah
+          blah so yeah basically that
+        </p>
+      </div>
+      <img
+        src="./src/media/midi_thumbnail.png"
+        alt="Brain-Rock-Thing sculpture"
+      />
+    </div>
+    <div class="section-heading">
+      <h2>Contact</h2>
+    </div>
+    <div class="normal-column">
+      <div class="contact-detail">
+        <i class="fa-regular fa-envelope"></i>
+        <h3>jacobfeitmann@gmail.com</h3>
+      </div>
+      <div class="contact-detail">
+        <i class="fa-brands fa-instagram"></i>
+        <h3>@i.love.kishka</h3>
+      </div>
+      <div class="contact-detail">
+        <i class="fa-brands fa-github"></i>
+        <h3>github.com/material-kish</h3>
+      </div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
