Hover formatting and correct pointing for links

--- a/index.html
+++ b/index.html
@@ -23,101 +23,115 @@
       <h2>Developer and Designer</h2>
     </div>
     <div class="centered-column" id="main-links">
-      <h2>– Design Work –</h2>
-      <h2>– Programming Work –</h2>
+      <a href="#design-work-section">
+        <h2>– Design Work –</h2>
+      </a>
+      <a href="#programming-work-section">
+        <h2>– Programming Work –</h2>
+      </a>
     </div>
-    <div class="centered-row mb" id="contact-icons">
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-github"></i>
-      <i class="fa-regular fa-envelope"></i>
+    <div class="centered-row mt mb" id="contact-icons">
+      <a href="https://www.instagram.com/i.love.kishka/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://github.com/material-kish" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a href='mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com'><i class="fa-regular fa-envelope"></i></a>
     </div>
-    <div class="centered-row mb-4">
+    <div class="centered-row mt mb-4">
       <img src="./src/media/arrow.svg" alt="Arrow Icon" />
     </div>
-    <div class="section-heading">
-      <h2>Design Work</h2>
-    </div>
-    <div class="gallery">
-      <div class="thumbnail">
-        <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+    <section id="design-work-section">
+      <div class="section-heading">
+        <h2>Design Work</h2>
       </div>
-      <div class="thumbnail">
+      <div class="gallery">
+        <div class="thumbnail">
+          <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+        </div>
+        <div class="thumbnail">
+          <img
+            src="./src/media/cupcakes_thumbnail.png"
+            alt="Afternoon Cupcakes Logo"
+          />
+        </div>
+        <div class="thumbnail">
+          <img
+            src="./src/media/amoriem_thumbnail.jpg"
+            alt="Amoriem Labs Logo"
+          />
+        </div>
+        <div class="thumbnail">
+          <img
+            src="./src/media/gaming_counters_thumbnail.png"
+            alt="Gaming Counters Collection Postcard"
+          />
+        </div>
+        <div class="thumbnail">
+          <img src="./src/media/grit_thumbnail.jpg" alt="GRIT Logo" />
+        </div>
+        <div class="thumbnail">
+          <img
+            src="./src/media/nmg_thumbnail.png"
+            alt="New Matrix Group Logo"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="programming-work-section">
+      <div class="section-heading">
+        <h2>Programming Work</h2>
+      </div>
+      <div class="project-card">
+        <div class="project-text">
+          <h2>"Brain-Rock-Thing"</h2>
+          <p>This is filler text to be replaced later</p>
+        </div>
         <img
-          src="./src/media/cupcakes_thumbnail.png"
-          alt="Afternoon Cupcakes Logo"
+          src="./src/media/brain_rock_thumbnail.png"
+          alt="Brain-Rock-Thing sculpture"
         />
       </div>
-      <div class="thumbnail">
-        <img src="./src/media/amoriem_thumbnail.jpg" alt="Amoriem Labs Logo" />
-      </div>
-      <div class="thumbnail">
+      <div class="project-card">
+        <div class="project-text">
+          <h2>High Noon</h2>
+          <p>
+            This one was a video game or something whatever man I'm going to
+            replace this text when I make the actual site ok
+          </p>
+        </div>
         <img
-          src="./src/media/gaming_counters_thumbnail.png"
-          alt="Gaming Counters Collection Postcard"
+          src="./src/media/high_noon_thumbnail.png"
+          alt="Brain-Rock-Thing sculpture"
         />
       </div>
-      <div class="thumbnail">
-        <img src="./src/media/grit_thumbnail.jpg" alt="GRIT Logo" />
+      <div class="project-card">
+        <div class="project-text">
+          <h2>MIDI Signal Augmenter</h2>
+          <p>
+            I used a language called SuperCollider to make this thing blah blah
+            blah so yeah basically that
+          </p>
+        </div>
+        <img
+          src="./src/media/midi_thumbnail.png"
+          alt="Brain-Rock-Thing sculpture"
+        />
       </div>
-      <div class="thumbnail">
-        <img src="./src/media/nmg_thumbnail.png" alt="New Matrix Group Logo" />
-      </div>
-    </div>
-    <div class="section-heading">
-      <h2>Programming Work</h2>
-    </div>
-    <div class="project-card">
-      <div class="project-text">
-        <h2>"Brain-Rock-Thing"</h2>
-        <p>This is filler text to be replaced later</p>
-      </div>
-      <img
-        src="./src/media/brain_rock_thumbnail.png"
-        alt="Brain-Rock-Thing sculpture"
-      />
-    </div>
-    <div class="project-card">
-      <div class="project-text">
-        <h2>High Noon</h2>
-        <p>
-          This one was a video game or something whatever man I’m going to
-          replace this text when I make the actual site ok
-        </p>
-      </div>
-      <img
-        src="./src/media/high_noon_thumbnail.png"
-        alt="Brain-Rock-Thing sculpture"
-      />
-    </div>
-    <div class="project-card">
-      <div class="project-text">
-        <h2>MIDI Signal Augmenter</h2>
-        <p>
-          I used a language called SuperCollider to make this thing blah blah
-          blah so yeah basically that
-        </p>
-      </div>
-      <img
-        src="./src/media/midi_thumbnail.png"
-        alt="Brain-Rock-Thing sculpture"
-      />
-    </div>
+    </section>
     <div class="section-heading">
       <h2>Contact</h2>
     </div>
-    <div class="normal-column">
-      <div class="contact-detail">
+    <div class="contact-section">
+      <a href='mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com' target="_blank" class="contact-detail">
         <i class="fa-regular fa-envelope"></i>
-        <h3>jacobfeitmann@gmail.com</h3>
-      </div>
-      <div class="contact-detail">
+        <h3>ja&#99;obfeitm&#97;nn&#64;gmail&#46;com</h3>
+      </a>
+      <a href='https://www.instagram.com/i.love.kishka/' target="_blank" class="contact-detail">
         <i class="fa-brands fa-instagram"></i>
         <h3>@i.love.kishka</h3>
-      </div>
-      <div class="contact-detail">
+      </a>
+      <a href="https://github.com/material-kish" target="_blank" class="contact-detail">
         <i class="fa-brands fa-github"></i>
         <h3>github.com/material-kish</h3>
-      </div>
+      </a>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
