Start work on project details overlay

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
       </a>
     </div>
     <div class="centered-row mt mb" id="contact-icons">
-      <a href="https://www.instagram.com/i.love.kishka/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://github.com/material-kish" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href='mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com'><i class="fa-regular fa-envelope"></i></a>
+      <a href="https://www.instagram.com/i.love.kishka/" target="_blank"
+        ><i class="fa-brands fa-instagram"></i
+      ></a>
+      <a href="https://github.com/material-kish" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+      <a href="mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com"
+        ><i class="fa-regular fa-envelope"></i
+      ></a>
     </div>
     <div class="centered-row mt mb-4">
       <img src="./src/media/arrow.svg" alt="Arrow Icon" />
@@ -43,8 +49,50 @@
         <h2>Design Work</h2>
       </div>
       <div class="gallery">
-        <div class="thumbnail">
+        <div class="thumbnail" onclick="showOverlay('avid-overlay')">
           <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+        </div>
+        <div id="avid-overlay" class="project-overlay">
+          <button class="close-overlay" onclick="hideOverlay('avid-overlay')">
+            <i class="fa-solid fa-x"></i>
+          </button>
+          <div class="overlay-content">
+            <h2>AVID Fitness Branding and Website</h2>
+            <p>
+              A short description would go here. Stuff like why I made this,
+              what my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details. A
+              short description would go here. Stuff like why I made this, what
+              my thinking was, constraints and other interesting details.
+            </p>
+          </div>
         </div>
         <div class="thumbnail">
           <img
@@ -120,15 +168,27 @@
       <h2>Contact</h2>
     </div>
     <div class="contact-section">
-      <a href='mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com' target="_blank" class="contact-detail">
+      <a
+        href="mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com"
+        target="_blank"
+        class="contact-detail"
+      >
         <i class="fa-regular fa-envelope"></i>
         <h3>ja&#99;obfeitm&#97;nn&#64;gmail&#46;com</h3>
       </a>
-      <a href='https://www.instagram.com/i.love.kishka/' target="_blank" class="contact-detail">
+      <a
+        href="https://www.instagram.com/i.love.kishka/"
+        target="_blank"
+        class="contact-detail"
+      >
         <i class="fa-brands fa-instagram"></i>
         <h3>@i.love.kishka</h3>
       </a>
-      <a href="https://github.com/material-kish" target="_blank" class="contact-detail">
+      <a
+        href="https://github.com/material-kish"
+        target="_blank"
+        class="contact-detail"
+      >
         <i class="fa-brands fa-github"></i>
         <h3>github.com/material-kish</h3>
       </a>
