Fix close button for project panel in place using an absolute positioned wrapper

--- a/index.html
+++ b/index.html
@@ -53,11 +53,16 @@
           <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
         </div>
         <div id="avid-overlay" class="project-overlay">
-          <button class="close-overlay" onclick="hideOverlay('avid-overlay')">
-            <i class="fa-solid fa-x"></i>
-          </button>
-          <div class="overlay-content">
-            <h2>AVID Fitness Branding and Website</h2>
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('avid-overlay')"
+              >
+                <i class="fa-solid fa-x"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">AVID Fitness Branding and Website</h2>
             <p>
               A short description would go here. Stuff like why I made this,
               what my thinking was, constraints and other interesting details. A
