--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
       ></a>
     </div>
     <div class="centered-row mt mb-4">
-      <img src="./src/media/arrow.svg" alt="Arrow Icon" />
+      <a href="#design-work-section">
+        <svg
+          width="93"
+          height="42"
+          viewBox="0 0 93 42"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M93 0C78.8164 6.65854 49.1244 24.3805 43.8247 42C37.2 24.8415 22.6767 10.5 0 0C19.3644 -4.00542e-05 35.1616 12.1219 43.8247 25.0975C53.6088 11.5756 80.6849 0.853658 93 0Z"
+            fill="currentColor"
+          />
+        </svg>
+      </a>
     </div>
     <section id="design-work-section">
       <div class="section-heading">
