Put avid media in its own subdir, start writing text for avid project details

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="gallery">
         <div class="thumbnail" onclick="showOverlay('avid-overlay')">
-          <img src="./src/media/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+          <img src="./src/media/avid/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
         </div>
         <div id="avid-overlay" class="project-overlay">
           <div class="overlay-panel">
@@ -72,43 +72,31 @@
                 class="close-overlay"
                 onclick="hideOverlay('avid-overlay')"
               >
-                <i class="fa-solid fa-x"></i>
+              <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
             <h2 class="text-center mb">AVID Fitness Branding and Website</h2>
             <p>
-              A short description would go here. Stuff like why I made this,
-              what my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details. A
-              short description would go here. Stuff like why I made this, what
-              my thinking was, constraints and other interesting details.
+              AVID's greatest asset was its strong sense of community, so while
+              we experimented with some pretty "out-there" ideas for the
+              rebrand, the owner, Avi, and I decided on a new logo that kept
+              some attributes of the old one, but with a more energetic and
+              sleeker feeling.
+            </p>
+            <h3>Logo and Branding</h3>
+            <figure>
+              <img
+                src="./src/media/avid/old_avid_logo.jpeg"
+                alt="Old AVID Fitness logo"
+              />
+              <figcaption>The old AVID logo</figcaption>
+            </figure>
+            <p>
+              AVID's greatest asset is its strong sense of community, so while
+              we experimented with some pretty "out-there" ideas for the
+              rebrand, the owner, Avi, and I decided on a new logo that kept
+              some attributes of the old one, but with a more energetic and
+              sleeker feeling.
             </p>
           </div>
         </div>
