Snapshot before fixing captions

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
       </div>
       <div class="gallery">
         <div class="thumbnail" onclick="showOverlay('avid-overlay')">
-          <img src="./src/media/avid/avid_thumbnail.jpg" alt="AVID Fitness Logo" />
+          <img
+            src="./src/media/avid/avid_thumbnail.jpg"
+            alt="AVID Fitness Logo"
+          />
         </div>
         <div id="avid-overlay" class="project-overlay">
           <div class="overlay-panel">
@@ -72,7 +75,7 @@
                 class="close-overlay"
                 onclick="hideOverlay('avid-overlay')"
               >
-              <i class="fa-solid fa-xmark"></i>
+                <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
             <h2 class="text-center mb">AVID Fitness Branding and Website</h2>
@@ -86,6 +89,7 @@
             <h3>Logo and Branding</h3>
             <figure>
               <img
+                class="float-r"
                 src="./src/media/avid/old_avid_logo.jpeg"
                 alt="Old AVID Fitness logo"
               />
@@ -98,6 +102,14 @@
               some attributes of the old one, but with a more energetic and
               sleeker feeling.
             </p>
+            <div class="centered-column">
+              <figure>
+                <img
+                  src="./src/media/avid/avid_thumbnail.jpg"
+                  alt="New AVID Fitness logo, white on blue background"
+                />
+              </figure>
+            </div>
           </div>
         </div>
         <div class="thumbnail">
