Fix captions (aka just set float-r class on figure instead of img

--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
               sleeker feeling.
             </p>
             <h3>Logo and Branding</h3>
-            <figure>
+            <figure class="float-r">
               <img
-                class="float-r"
                 src="./src/media/avid/old_avid_logo.jpeg"
                 alt="Old AVID Fitness logo"
               />
