Create grid layout for AVID project details

--- a/index.html
+++ b/index.html
@@ -87,13 +87,6 @@
               sleeker feeling.
             </p>
             <h3>Logo and Branding</h3>
-            <figure class="float-r">
-              <img
-                src="./src/media/avid/old_avid_logo.jpeg"
-                alt="Old AVID Fitness logo"
-              />
-              <figcaption>The old AVID logo</figcaption>
-            </figure>
             <p>
               AVID's greatest asset is its strong sense of community, so while
               we experimented with some pretty "out-there" ideas for the
@@ -101,14 +94,33 @@
               some attributes of the old one, but with a more energetic and
               sleeker feeling.
             </p>
-            <div class="centered-column">
+            <div class="grid two-columns img-height-180">
               <figure>
                 <img
-                  src="./src/media/avid/avid_thumbnail.jpg"
+                  src="./src/media/avid/old_avid_logo.jpeg"
+                  alt="Old AVID Fitness logo"
+                />
+                <figcaption>Old logo</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="./src/media/avid/blue_on_white.jpg"
                   alt="New AVID Fitness logo, white on blue background"
                 />
+                <figcaption>New logo</figcaption>
               </figure>
             </div>
+            <figure>
+              <div class="grid funky-grid-1">
+                <img src="./src/media/avid/profile_pic_2.png" />
+                <img src="./src/media/avid/post1.png" />
+                <img src="./src/media/avid/story1.png" />
+                <img src="./src/media/avid/post4.png" />
+                <img src="./src/media/avid/multi-image.png" />
+                <img src="./src/media/avid/post2.png" />
+              </div>
+              <figcaption class="mt">Social media templates and brand assets</figcaption>
+            </figure>
           </div>
         </div>
         <div class="thumbnail">
