Finish AVID Project details

--- a/index.html
+++ b/index.html
@@ -119,8 +119,38 @@
                 <img src="./src/media/avid/multi-image.png" />
                 <img src="./src/media/avid/post2.png" />
               </div>
-              <figcaption class="mt">Social media templates and brand assets</figcaption>
+              <figcaption class="mt">
+                Social media templates and brand assets
+              </figcaption>
             </figure>
+            <h3>Website</h3>
+            <a href="https://avidstrong.com" target="_blank">avidstrong.com</a>
+            <p>
+              I built AVID’s website with WordPress, using a theme called GoFiz.
+              I customized the theme to fit the branding we had created in the
+              first step, keeping in mind the themes of community, energy, and
+              motivation which were core to the business.
+            </p>
+            <p>
+              AVID uses a software called MindBody which takes care of tracking
+              customer information: class enrollments, payment info, etc. I
+              customized MindBody’s web widgets to match the brand, and embedded
+              them the HTML of the site.
+            </p>
+            <div class="centered-column">
+              <img
+                src="./src/media/avid/homepage_screenshot.jpg"
+                alt="AVID Homepage"
+              />
+              <img
+                src="./src/media/avid/contact_screenshot.jpg"
+                alt="AVID Contact Form"
+              />
+              <img
+                src="./src/media/avid/classes_screenshot.jpg"
+                alt="AVID CLasses Widget using MindBody"
+              />
+            </div>
           </div>
         </div>
         <div class="thumbnail">
