Write up Amoriem project details

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
-            <h2 class="text-center mb">AVID Fitness Branding and Website</h2>
+            <h2 class="text-center mb">AVID Fitness - Branding and Website</h2>
             <p>
               AVID's greatest asset was its strong sense of community, so while
               we experimented with some pretty "out-there" ideas for the
@@ -169,11 +169,12 @@
                 <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
-            <h2 class="text-center mb">Afternoon Cupcakes Logo</h2>
+            <h2 class="text-center mb">Afternoon Cupcakes - Logo</h2>
             <p>
               As an exercise, I challenged myself to make a logo for a bakery,
               and came up with this. I did this back in high school, but I still
-              think it's cute. I remember being pleased with the font at the time (Abril Fatface if you're curious).
+              think it's cute. I remember being pleased with the font at the
+              time (Abril Fatface if you're curious).
             </p>
             <div class="centered-column">
               <img
@@ -183,26 +184,175 @@
             </div>
           </div>
         </div>
-        <div class="thumbnail">
+        <div class="thumbnail" onclick="showOverlay('amoriem-overlay')">
           <img
-            src="./src/media/amoriem_thumbnail.jpg"
+            src="./src/media/amoriem/amoriem_thumbnail.jpg"
             alt="Amoriem Labs Logo"
           />
         </div>
-        <div class="thumbnail">
+        <div id="amoriem-overlay" class="project-overlay">
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('amoriem-overlay')"
+              >
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">Amoriem Labs - Logo and Branding</h2>
+            <p>
+              <a href="https://amoriem-labs.github.io/index.html"
+                >Amoriem Labs</a
+              >
+              is the undergraduate game development club at Yale University.
+              Before I was project manager as a junior, I started as a
+              first-year designing logos and UI elements. Amoriem’s name comes
+              from the first game produced by its members. From Amoriem’s
+              website:
+            </p>
+            <blockquote cite="https://amoriem-labs.github.io/about.html">
+              The name is an anagram of memoria ("memory" in Latin), and
+              includes the words amor ("love" in Spanish) and mori ("to die" in
+              Latin).”
+            </blockquote>
+            <p>
+              While my design philosophy is usually about emphasizing aesthetics
+              and tone over gimmicks and “visual puns”, I decided to go against
+              that guideline in creating the symbol used in the logo. In the
+              landscape orientation, it resembles the buttons and D-pad of a
+              typical gamepad layout. When rotated to the portrait orientation,
+              it resembles (albeit abstractly) a skull with a heart on the
+              forehead - a nod to the etymology of the group’s name.
+            </p>
+            <div class="grid two-columns">
+              <img
+                src="./src/media/amoriem/logo_landscape_icon.png"
+                alt="Amoriem logo with icon in landscape orientation"
+              />
+              <img
+                src="./src/media/amoriem/logo_portrait_icon.png"
+                alt="Amoriem logo with icon in portrait orientation"
+              />
+            </div>
+            <p>
+              When choosing the brand colors, I first considered using
+              <a
+                href="https://yaleidentity.yale.edu/core-identity-elements/yale-colors"
+                >Yale’s signature blue</a
+              >, but decided against it. Many clubs at Yale use those colors, so
+              I figured that in order for our flyers and such to stand out, we
+              would need to go a different route. I went with colors that were
+              vibrant, exciting, and a bit unconventional to reflect the
+              enthusiasm and slight avante-garde bent to the club’s game
+              development ethos.
+            </p>
+            <p>
+              Since my time with the club, the logo has been updated and
+              streamlined - and I have to admit, while the skull imagery has
+              been lost, the new logo is a fair bit cleaner and easier to read.
+              Nevertheless, I’m happy with the original version, and glad to see
+              that its DNA is still there.
+            </p>
+            <figure>
+              <img
+                class="small-image"
+                src="./src/media/amoriem/new_logo.png"
+                alt="Amoriem Labs' new logo"
+              />
+              <figcaption class="img-height-100">The new logo</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="thumbnail" onclick="showOverlay('gaming-counters-overlay')">
           <img
             src="./src/media/gaming_counters_thumbnail.png"
             alt="Gaming Counters Collection Postcard"
           />
         </div>
-        <div class="thumbnail">
+        <div id="gaming-counters-overlay" class="project-overlay">
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('gaming-counters-overlay')"
+              >
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">Afternoon Cupcakes Logo</h2>
+            <p>
+              As an exercise, I challenged myself to make a logo for a bakery,
+              and came up with this. I did this back in high school, but I still
+              think it's cute. I remember being pleased with the font at the
+              time (Abril Fatface if you're curious).
+            </p>
+            <div class="centered-column">
+              <img
+                src="./src/media/cupcakes_thumbnail.png"
+                alt="Afternoon Cupcakes Logo"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail" onclick="showOverlay('grit-overlay')">
           <img src="./src/media/grit_thumbnail.jpg" alt="GRIT Logo" />
         </div>
-        <div class="thumbnail">
+        <div id="grit-overlay" class="project-overlay">
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('grit-overlay')"
+              >
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">Afternoon Cupcakes Logo</h2>
+            <p>
+              As an exercise, I challenged myself to make a logo for a bakery,
+              and came up with this. I did this back in high school, but I still
+              think it's cute. I remember being pleased with the font at the
+              time (Abril Fatface if you're curious).
+            </p>
+            <div class="centered-column">
+              <img
+                src="./src/media/cupcakes_thumbnail.png"
+                alt="Afternoon Cupcakes Logo"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail" onclick="showOverlay('nmg-overlay')">
           <img
             src="./src/media/nmg_thumbnail.png"
             alt="New Matrix Group Logo"
           />
+        </div>
+        <div id="nmg-overlay" class="project-overlay">
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('nmg-overlay')"
+              >
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">Afternoon Cupcakes - Logo</h2>
+            <p>
+              As an exercise, I challenged myself to make a logo for a bakery,
+              and came up with this. I did this back in high school, but I still
+              think it's cute. I remember being pleased with the font at the
+              time (Abril Fatface if you're curious).
+            </p>
+            <div class="centered-column">
+              <img
+                src="./src/media/cupcakes_thumbnail.png"
+                alt="Afternoon Cupcakes Logo"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </section>
